@@ -496,6 +496,7 @@ pm-inconel-625-heating-coil=Inconel-625 heating coil
 pm-ammonium-ruthenium-chloride=Ammonium ruthenium chloride
 pm-ruthenium-ore=Ruthenium ore
 pm-ruthenium-plate=Ruthenium plate
+rocket-fuel=Solid rocket fuel
 
 automation-science-pack=Transition metal pack
 logistic-science-pack=Advanced transition metal pack
@@ -1826,6 +1827,7 @@ pm-selenium-battery-equipment=Selenium battery equipment
 pm-inserter-capacity-bonus=Inserter capacity bonus
 pm-nitric-acid-processing=Nitric acid processing
 pm-noble-gas-pack-unlock=Noble gas science pack
+rocket-fuel=Solid rocket fuel
 
 pm-ferric-chloride-processing=Ferric chloride processing
 pm-advanced-chlorine-processing=Advanced chlorine processing
@@ -2024,6 +2026,7 @@ pm-lead-processing=A dense, radiation-resistant post-transition metal.
 pm-RTG-equipment=An indefinitely working RTG that can be put into your equipment grid, but is less efficient and takes more space then its counterparts
 pm-circuit-megassembler-MK2=The second iteration of the Circuit Megassembler. This one works even faster, can become even stronger and even has a nice green (not yellow) coat of paint!
 pm-inserter-capacity-bonus=Allows bulk inserters to move more items at once. Some of the upgrades add a small amount of stacking even to non-bulk inserters.
+rocket-fuel=Solid rocket fuel to launch your first rocket. Powerful but extremely unwieldy and can be used inside vehicles for immense speed.
 
 pm-ferric-chloride-processing=A compound of a ferrous metal and chlorine, used in cleaning waste water or acidic processes.
 pm-advanced-chlorine-processing=A more sophisticated way of making Hydrochloric acid, while using.. no chlorine.
